# live-translator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md
scripts/: build.sh  setup-models.sh  test.sh
src/: asr.rs  audio.rs  log.rs  main.rs  pipeline.rs  protocol.rs  translator.rs  vad.rs
